--- a/lex/BUILD.bazel
+++ b/lex/BUILD.bazel
@@ -5,6 +5,8 @@ load("//bzl:rules.bzl",
      "compiler_signature",
      "boot_library")
 
+load("//bzl/rules:COMPILER.bzl", "OCAML_COMPILER_OPTS")
+
 load("//tools:TOOL_RULES.bzl",
      "ocaml_tool_vm",
      "ocaml_tool_sys",
@@ -89,38 +91,38 @@ SIG_OPTS    =  ["-strict-formats"]
 
 BOOT_OPTS = ["-strict-sequence", "-nostdlib", "-compat-32", "-w", "-31"]
 
-ocaml_tool_r(
-    name       = "ocamllex",
-    opts = ["-verbose"],
-    cc_linkopts = select({
-        "@platforms//os:macos": [ ## FIXME: default tc, not zig
-            # "-Wl,-v", # prints config, search paths
-            # "-Wl,-print_statistics", # -Wl,-v plus timings, mem, etc.
-            # "-t", # -Wl-v plus logs each file the linker loads.
-            # "-why_load" # Log why each object file in a static library
-            #             # is loaded. That is, what symbol was needed.
-            ## zig linker opts
-            # "-v",
-            ],
-        "@platforms//os:linux": [
-            # "-Wl,--verbose"
-            ##FIXME: depends on linker used (bfd, gold, etc.)
-        ]
-    }),
-    prologue   = [":lex"],
-    main       = ":Main",
-    # opts       = select({
-    #     "//platform/target:vm?" : BOOT_OPTS,
-    #     "//platform/target:sys?": ["-nostdlib"],
-    #     "//conditions:default"   : BOOT_OPTS
-    # }),
-    use_prims = select({
-        # "//platform/target:vm?" : True,
-        # "//platform/target:sys?": False,
-        "//conditions:default"   : True
-    }),
-    visibility = ["//visibility:public"]
-)
+# ocaml_tool_r(
+#     name       = "ocamllex",
+#     opts = ["-verbose"],
+#     cc_linkopts = select({
+#         "@platforms//os:macos": [ ## FIXME: default tc, not zig
+#             # "-Wl,-v", # prints config, search paths
+#             # "-Wl,-print_statistics", # -Wl,-v plus timings, mem, etc.
+#             # "-t", # -Wl-v plus logs each file the linker loads.
+#             # "-why_load" # Log why each object file in a static library
+#             #             # is loaded. That is, what symbol was needed.
+#             ## zig linker opts
+#             # "-v",
+#             ],
+#         "@platforms//os:linux": [
+#             # "-Wl,--verbose"
+#             ##FIXME: depends on linker used (bfd, gold, etc.)
+#         ]
+#     }),
+#     prologue   = [":lex"],
+#     main       = ":Main",
+#     # opts       = select({
+#     #     "//platform/target:vm?" : BOOT_OPTS,
+#     #     "//platform/target:sys?": ["-nostdlib"],
+#     #     "//conditions:default"   : BOOT_OPTS
+#     # }),
+#     use_prims = select({
+#         # "//platform/target:vm?" : True,
+#         # "//platform/target:sys?": False,
+#         "//conditions:default"   : True
+#     }),
+#     visibility = ["//visibility:public"]
+# )
 
 ocaml_tool_vm(
     name       = "ocamllex.byte",
@@ -160,16 +162,17 @@ ocaml_tool_sys(
     opts = ["-verbose"],
     prologue   = [":lex"],
     main       = ":Main",
+    opts      = OCAML_COMPILER_OPTS,
     # opts       = select({
     #     "//platform/target:vm?" : BOOT_OPTS,
     #     "//platform/target:sys?": ["-nostdlib"],
     #     "//conditions:default"   : BOOT_OPTS
     # }),
-    use_prims = select({
-        # "//platform/target:vm?" : True,
-        # "//platform/target:sys?": False,
-        "//conditions:default"   : True
-    }),
+    # use_prims = select({
+    #     # "//platform/target:vm?" : True,
+    #     # "//platform/target:sys?": False,
+    #     "//conditions:default"   : True
+    # }),
     visibility = ["//visibility:public"]
 )
 
