--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -10,9 +10,9 @@ obazl_deps()
 local_repository(
     name = "baseline",
     path = ".baseline",
-    repo_mapping = {
-        "@baseline": "@ocamlcc"
-    }
+    # repo_mapping = {
+    #     "@baseline": "@ocamlcc"
+    # }
 )
 
 ocaml_xcode()
